--- a/index.html
+++ b/index.html
@@ -158,7 +158,18 @@
                </ul>
            </div> 
         </div>
-        <div class="channels">
+        <button class="show-channels"  onclick="ShowHideChannels()"><img src="./images/Component 46 – 6.png" alt=""></button>
+        <div class="packet-mob">
+            <div class="packets-mob">
+                <p>ძირითადი</p>
+                <p>104 <span class="span1">არხი</span> /12 <span><sup> ₾</sup>  თვე</span></p>
+            </div>
+            <div class="packets-mob">
+                <p>მეტი</p>
+                <p>104 <span class="span1">არხი</span> /12 <span><sup> ₾</sup>  თვე</span></p>
+            </div>
+        </div>
+        <div class="channels" id="show-hide">
             <div class="menu-list">
                 <img class="logo1" src="./images/logo tvg (1).png" alt="logo">
                 <ul>
@@ -260,7 +271,7 @@
         </div>
         <div class="pay">
             <img class="info-img" src="./images/Mask Group 7.png" alt="Rectangle">
-
+     
             <div class="mb-wm">
                 <p>მოხერხებული გადახდის საშუალებები</p>
             </div>
