--- a/pages/packets.html
+++ b/pages/packets.html
@@ -136,15 +136,15 @@
             <div class="channels1">
                 <div class="menu-list1">
                     <img class="logo2" src="../images/logo tvg (1).png" alt="logo">
-                    <ul>
-                        <li>საბავშვო<span>30 არხი</span></li>
+                    <ul id="category-list">
+                        <!-- <li>საბავშვო<span>30 არხი</span></li>
                         <li>ზოგადი<span>30 არხი</span></li>
                         <li>სპორტული<span>30 არხი</span></li>
                         <li>რეგიონული<span>30 არხი</span></li>
                         <li>გასართობი<span>30 არხი</span></li>
                         <li>ფილმები<span>30 არხი</span></li>
                         <li>შემეცნებითი<span>30 არხი</span></li>
-                        <li>18+<span>30 არხი</span></li>
+                        <li>18+<span>30 არხი</span></li> -->
                     </ul>
                 </div>
                 <div class="mid-channels1">
@@ -166,8 +166,8 @@
                             <li><img src="../images/Group 413.png" alt="store">Android TV/Box</li>
                         </ul>
                     </div>
-                    <div class="channels-list1">
-                        <div class="list2">
+                    <div class="channels-list1" id="test">
+                        <!-- <div class="list2">
                             <img src="../images/Mask Group 4.png" alt="channel">
                             <div class="channel-name1">
                                 <p>ენკი ბენკი</p>
@@ -229,7 +229,7 @@
                                 <p>ენკი ბენკი</p>
                                 <p>lorem ipsum</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
