--- a/pages/question.html
+++ b/pages/question.html
@@ -13,8 +13,8 @@
             <img class="logo" src="../images/logo tvg (1).png" alt="logo">
             <div class="menu">
                 <ul>
-                    <li><a href="../index.html">მთავარი</a></li>
-                    <li><a href="./packets.html">პაკეტები და მოწყობილობა</a></li>
+                    <li><a href="../index.html">პაკეტები და მოწყობილობები</a></li>
+                    <li><a href="./packets.html">ონლაინ შეკვეთა</a></li>
                     <li><a href="#">ხშირად დასმული კითხვები</a></li>
                 </ul>
             </div>
@@ -45,26 +45,37 @@
             <div class="container">
                 <div class="questions">
                     <div class="main-question">
-                        <p>როგორ გადავიხადოთ</p>
+                        <p>რა არის TVG Box?</p>
                         <button onclick="ShowAndHide()"><img src="../images/Path 36.png" alt=""></button>
                     </div>
                     
                     <div class="answer" id="SectionName">
                         <hr>
-                        <p>გადასახდელად მიმართეთ თქვენს მომსახურე პროვაიდერს</p>
+                        <p>TVG Box არის ელექტრონული მოწყობილობა, რომელიც უერთდება ნებისმიერ ტელევიზორს ან ეკრანს და აქცევს მას სმარტ ტელევიზორად ან კომპიუტერად.</p>
                     </div>
                 </div>
             </div>
             <div class="container">
                 <div class="questions">
                     <div class="main-question">
-                        <p>როგორ გადავიხადოთ</p>
+                        <p>რატომ უნდა შევიძინოთ TVG Box?</p>
                         <button onclick="ShowAndHide1()"><img src="../images/Path 36.png" alt=""></button>
                     </div>
                     
                     <div class="answer" id="SectionName1">
                         <hr>
-                        <p>გადასახდელად მიმართეთ თქვენს მომსახურე პროვაიდერს</p>
+                        <p>TVG Box TV Box-ია, რომელიც საშუალებას გაძლევს:</p>
+                        <ul>
+                            <li>⦁ უყურო ქართულ და უცხოურ მაღალრეიტინგულ არხებს;</li>
+                            <li>⦁ უფასოდ უყურო ნებისმერ ფილმსა და სერიალს;</li>
+                            <li>⦁ მოუსმინო მუსიკას;</li>
+                            <li>⦁ გახსნა ნებისმიერი საიტი;</li>
+                            <li>⦁ გადმოწერო და გამოიყენო სხვადასხვა აპლიკაცია;</li>
+                            <li>⦁ ითამაშო კომპიუტერული თამაშები;</li>
+                            <li>⦁ მიუერთო და გამოიყენო სხვადასხვა მოწყობილობა: ჯოისტიკი, სპიკერი, მაუსი, კლავიატურა, პროექტორი… </li>
+                            <li>⦁ დისტანციიდან მართო და თვალი ადევნო სხვადასხვა სმარტ მოწყობილობებს: მაცივარი, კონდიციონერი...</li>
+
+                        </ul>
                     </div>
                 </div>
             </div>
