--- a/index.html
+++ b/index.html
@@ -306,12 +306,14 @@
         <div class="partners">
             <p>პარტნიორები</p>
             <div class="partners-logo">
-                <img src="./images/Group 324.png" alt="partners image">
-                <img src="./images/Group 324.png" alt="partners image">
-                <img src="./images/Group 324.png" alt="partners image">
-                <img src="./images/Group 324.png" alt="partners image">
-                <img src="./images/Group 324.png" alt="partners image">
-                <img src="./images/Group 324.png" alt="partners image">
+                <img src="./images/1.png" alt="partners image">
+                <img src="./images/2.png" alt="partners image">
+                <img src="./images/3.png" alt="partners image">
+                <img src="./images/4.png" alt="partners image">
+                <img src="./images/5.png" alt="partners image">
+                <img src="./images/6.png" alt="partners image">
+                <img src="./images/7.png" alt="partners image">
+                <img src="./images/8.png" alt="partners image">
             </div>
         </div>
         <div class="footer">
