--- a/pages/packets.html
+++ b/pages/packets.html
@@ -198,8 +198,8 @@
                 <div class="menu-list1">
                     <img class="logo2" src="../images/logo tvg (1).png" alt="logo">
                     <img class="channel-icons1" src="../images/tv.png" alt="TV">
-                    <img class="channel-icons1" src="../images/Apple Menu.png" alt="Apple">
-                    <img class="channel-icons1" src="../images/Group 412.png" alt="Android">
+                    <img class="channel-icons1" src="../images/apple logo.png" alt="Apple">
+                    <img class="channel-icons1" src="../images/Group 490.png" alt="Android">
                     <img class="channel-icons1" src="../images/Group 413.png" alt="store">
                     <ul id="category-list">
                         <!-- <li>საბავშვო<span>30 არხი</span></li>
@@ -306,7 +306,7 @@
                     <p>IP ტელევიზია +</p>
                     <p>TVG Iron</p>
                     <p>ხშირად დასმული კითხვები</p>
-                    <button onclick="topFunction()" id="scrollTop"><img class="arrow" src="../images/arrow.png" alt=""></button>
+                    <button class="arrow-button" onclick="topFunction()" id="scrollTop"><img class="arrow" src="../images/Component 49 – 2.png" alt=""></button>
                 </div>
                 <hr>
                 <div class="bottom-footer">
