--- a/pages/packets.html
+++ b/pages/packets.html
@@ -135,7 +135,7 @@
             </div>
         </div>
         <div class="interface">
-            <div class="inter">
+            <!-- <div class="inter">
                 <p>ინტერფეისი</p>
                 <ul>
                     <li>WiFi: <span>2.4GHz IEEE 802.11a/b/g/n</span></li>
@@ -147,7 +147,7 @@
 
                 </ul>
             </div>
-            <img src="../images/Image 1.png" alt="device">
+            <img src="../images/Image 1.png" alt="device"> -->
 
 
            <!-- <button class="show-channels"  onclick="ShowHideChannels()"><img src="./images/Component 46 – 6.png" alt=""></button> -->
