--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
             <div class="tvg-iron">
                 <p>TVG BOX</p>
                 <ul>
-                    <li>კომპიუტერი და TV ერთ მოწყობილობაში</li>
-                    <li>კომპიუტერი და TV ერთ მოწყობილობაში</li>
-                    <li>კომპიუტერი და TV ერთ მოწყობილობაში</li>
-                    <li>კომპიუტერი და TV ერთ მოწყობილობაში</li>
+                    <li>უპირატესობები:</li>
+                    <li>⦁ კომპიუტერი და TV ერთ მოწყობილობაში</li>
+                    <li>⦁ მოძრავი ტელევიზია</li>
+                    <li>⦁ სრულად მართვადი ბოქსი</li>
+                    <li>⦁ მაღალი ხარისხის გამოსახულება</li>
 
                 </ul>
                 <div class="more-info">
