--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>TVG</title>
+    <!-- <link href="https://free.bboxtype.com/embedfonts/?family=FiraGO:300" rel="stylesheet"> -->
 </head>
 <body>
     <div class="main">
