--- a/pages/question.html
+++ b/pages/question.html
@@ -107,7 +107,7 @@
             </div>
             
         </div>
-        <div class="partners">
+        <!-- <div class="partners">
             <p>პარტნიორები</p>
             <div class="partners-logo">
                 <img src="../images/Group 324.png" alt="partners image">
@@ -117,7 +117,7 @@
                 <img src="../images/Group 324.png" alt="partners image">
                 <img src="../images/Group 324.png" alt="partners image">
             </div>
-        </div>
+        </div> -->
         <div class="footer">
             <div class="top-footer">
                 <p>IP ტელევიზია +</p>
